--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.7.7",
     "chart.js": "^4.4.4",
+    "chartjs-plugin-annotation": "^3.0.1",
     "lottie-react": "^2.4.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
